--- a/README
+++ b/README
@@ -1,33 +1,51 @@
-update-ca-certificates is intended to maintain the system CA
-certificates in /etc/ssl/certs. It does so by symlinking PEM files
-from /usr/share/ca-certificates to /etc/ssl/certs. That way
-distributions and administrators can install additional certificates
-simply via packages.
+ca-certificates
+===============
+
+Utilities for system wide CA certificate installation
+
+update-ca-certificates is intended to keep the certificate stores of
+various components in sync with the system CA certificates.
+
+The canonical source of CA certificates is what p11-kit knows about.
+By default p11-kit looks into /usr/share/ca-certificates/anchors
+resp /etc/pki/trust/anchors but there could be other plugins that
+serve as source for certificates as well.
+
+Supported Certificate Stores
+============================
+
+update-ca-certificate supports a number of legacy certificate stores
+for applications that don't talk to p11-kit directly yet. It does so
+by generating the certificate stores in /var/lib/ca-certificates and
+having symlinks from the locations where applications expect those
+files.
+
+- /etc/ssl/certs: Hashed directory readable by openSSL. Only for
+  legacy applications. Only contains CA certificates for server-auth
+  purpose. Avoid using this in applications.
+- /etc/ssl/ca-bundle.pem: Concatenated bundle of CA certificates
+  with server-auth purpose. Avoid using this in applications.
+- java-cacerts: Key store fore Java. Only filled with CA
+  certificates with purpose server-auth.
+- openssl: hashed directory with CA certificates of all purposes.
+  Your system openSSL knows how to read that, don't hardcode the
+  path! Call SSL_CTX_set_default_verify_paths() instead.
+
+Differences to previous versions on openSUSE
+============================================
+
+- Packages are expected to install their CA certificates in
+  /usr/share/ca-certificates/anchors/ now.
+
+- /etc/ca-certificates.conf is no longer supported. Symlink the
+  certificate you don't want to /etc/pki/trust/blacklist.
 
 Differences to Debian
-~~~~~~~~~~~~~~~~~~~~~
+=====================
 
-- /etc/ca-certificates.conf serves as backlist or whitelist. If
-  it's empty (=default) or only contains entries that start with '!'
-  the file serves as backlist. Any entry that doesn't start with
-  '!' turns the file into a whitelist so each trusted certificate
-  has to be listed explicitly.
-- hook scripts don't receive the list of changed certificates on
+- /etc/ca-certificates.conf is not supported.
+- Hook scripts don't receive the list of changed certificates on
   stdin. That allows scripts have their own method to determine
   changes.
 - The command line arguments -v and -f are passed to hook scripts.
-- the CA bundle file is generated via hook script too.
-
-OpenSSL trusted certificates
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-openSSL supports 'trusted certificates' that can store additional
-usage constraints and a certificate alias. Their PEM file format is
-not supported by other SSL implementations though. So hook scripts
-may need to convert such files to standard PEM format. To avoid
-having to parse openssl output such certificates are expected to
-contain additional "header fields" that list the usage constraints
-and the alias. Example:
-# alias=Deutsche Telekom Root CA 2
-# trust=code-signing email-protection server-auth
-# openssl-trust=codeSigning emailProtection serverAuth
+- All stores are created via hook scripts.
