Fix typo in man page

--- a/update-ca-certificates.8
+++ b/update-ca-certificates.8
@@ -59,7 +59,7 @@ Directory of blacklisted CA certificates
 .I /etc/pki/trust/anchors
 Directory of CA certificate trust anchors for use by the admin
 .TP
-.I /etc/pki/trust/anchors
+.I /etc/pki/trust/blacklist
 Directory of blacklisted CA certificates for use by the admin
 .SH SEE ALSO
 .BR c_rehash (1),
