Add --root <directory> option
This can be used to generate a bundle in a base root directory other than /,
for example useful for building static certificate bundles.

--- a/update-ca-certificates.8
+++ b/update-ca-certificates.8
@@ -46,6 +46,9 @@ Show summary of options.
 .B \-v, \-\-verbose
 Be verbose. Output \fBc_rehash\fP.
 .TP
+.B \-r, \-\-root <Directory>
+Root Directory to use (defaults to / if not specified).
+.TP
 .B \-f, \-\-fresh
 Fresh updates. Don't update stores incrementally but create from scratch.
 .SH FILES
