typo: differnt/different

--- a/update-ca-certificates.8
+++ b/update-ca-certificates.8
@@ -35,7 +35,7 @@ can be placed in /etc/pki/trust/blacklist
 \fBupdate-ca-certificates\fP invokes
 custom hooks in /usr/lib/ca-certificates/update.d/*.run and
 /etc/ca-certificates/update.d/*.run to generate various certificate storages as
-used by differnt programs. The command line options used for invoking
+used by different programs. The command line options used for invoking
 update-ca-certificates are passed to the hooks as well.
 .SH OPTIONS
 A summary of options is included below.
